bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:2: error: not found: value ||
  if (a>=10 && a<= 20) || (b>=10 && b<= 20){
                       ^